2007-01-31  Michael Natterer  <mitch@gimp.org>

	* app/core/Makefile.am
	* app/core/core-types.h
	* app/core/gimplayermaskpropundo.[ch]: new undo class for
	GIMP_UNDO_LAYER_MASK_APPLY and GIMP_UNDO_LAYER_MASK_SHOW.

	* app/core/gimpimage-undo-push.c: use it here.

2007-01-31  Michael Natterer  <mitch@gimp.org>

	* app/core/Makefile.am
	* app/core/core-types.h
	* app/core/gimpchannelundo.[ch]
	* app/core/gimplayerundo.[ch]
	* app/core/gimplayermaskundo.[ch]: new undo classes implementing
	channel, layer and layer mask add and remove undos.

	* app/vectors/Makefile.am
	* app/vectors/vectors-types.h
	* app/vectors/gimpvectorsundo.[ch]: vectors add and remove undos.

	* app/core/gimpimage-undo-push.[ch]: use the new undo classes.
	Removed "position" parameter from all "add" functions because
	it's useless.

	* app/core/gimpimage.c: changed accordingly.

2007-01-31  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/screenshot.c (select_window_x11): if we can't
	grab the pointer, use the window under the pointer instead of
	bailing out with an error message.

2007-01-31  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/screenshot.c (shoot_dialog): fixed tooltip.

2007-01-30  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpchannelundo.[ch]: renamed these files...

	* app/core/gimpmaskundo.[ch]: ...to these. We'll need the name
	GimpChannelUndo for something else later.

	* app/core/Makefile.am
	* app/core/core-types.h
	* app/core/gimpimage-undo-push.c: changed accordingly.

2007-01-30  Michael Natterer  <mitch@gimp.org>

	* app/vectors/Makefile.am
	* app/vectors/vectors-types.h
	* app/vectors/gimpvectorspropundo.[ch]: new undo class which
	implements GIMP_UNDO_VECTORS_REPOSITION.

	* app/core/gimpimage-undo-push.c: use it here.

	* app/Makefile.am: another lame linker hack to make it build with
	the new file that is not used in app/vectors/ itself.

2007-01-30  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpguideundo.c
	* app/core/gimpimageundo.c